# rgbd_dense_slam-code

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: FindFreeNect.cmake  FindGLEW.cmake  rgbd-tracker_cmake_helpers.cmake
config/: gputracker_config.xml
ext/: CMakeLists.txt
ext/poisson/: CMakeLists.txt  PoissonRecon-wrapper.cpp  PoissonRecon-wrapper.h  get_PoissonRecon.sh
ext/tinyxml/: CMakeLists.txt
project/: Makefile  cmake_install.cmake
project.debug/: Makefile  cmake_install.cmake  rgbd-tracker.cbp
project.debug/ext/: Makefile  cmake_install.cmake
project.debug/ext/poisson/: Makefile  cmake_install.cmake
project.debug/ext/tinyxml/: Makefile  cmake_install.cmake
project.debug/src/: cmake_install.cmake
project.debug/src/gputracker/: Makefile  cmake_install.cmake
project.debug/src/kinectRecorder/: Makefile  cmake_install.cmake
project/ext/: Makefile  cmake_install.cmake
project/ext/poisson/: Makefile  cmake_install.cmake
project/ext/tinyxml/: Makefile  cmake_install.cmake
project/src/: cmake_install.cmake
project/src/gputracker/: Makefile  cmake_install.cmake
project/src/kinectRecorder/: Makefile  cmake_install.cmake
scratch/: teapot.txt
sequences/kinectScratch/0/: 0002.ppm  0003.ppm  0004.ppm  0005.ppm  0006.ppm  0007.ppm  0008.ppm  0009.ppm  0010.ppm  0011.ppm  0012.ppm  0013.ppm  0014.ppm  0015.ppm  0016.ppm  0017.ppm  0018.ppm  0019.ppm  0020.ppm  0021.ppm  0022.ppm  0023.ppm  0024.ppm  0025.ppm  0026.ppm  0027.ppm  0028.ppm  0029.ppm  calib  cameraMatrixEst-kinfu.txt  cameraMatrixEst-ref.txt  cameraMatrixEst.txt  rawdepth0001.ppm  rawdepth0002.ppm  rawdepth0003.ppm  rawdepth0004.ppm  rawdepth0005.ppm  rawdepth0006.ppm  rawdepth0007.ppm  rawdepth0008.ppm  (+21 more)
sequences/scratch_0_calib/calib/: calib.xml
shaders/: XBlurShader.sha  YBlurShader.sha  phongPS.glsl  phongVS.glsl  testShader.sha  texShader.sha
src/: CMakeLists.txt
src/gputracker/: CMakeLists.txt  cputracker.cpp  cputracker.h  gputracker.cpp  gputracker.h
src/gputracker/cudakernels/: adapted_histograms.cu  adapted_histograms.h  convert2FloatCuda.cu  cuda_funcs.h  d2z.cu  downSample2Cuda.cu  expmCuda.cu  expmCuda.h  f2cCuda.h  hostUtils.cpp  hostUtils.h  kernelUtils.h  rgb2gray.cu  undistort.cu  warp.cu
src/gputracker/utils/calib/: GroundTruth.cpp  GroundTruth.h  ResultTxt.cpp  ResultTxt.h  calib.cpp  calib.h
src/gputracker/utils/camera/: Camera.cpp  Camera.hpp  InteractiveCamera.cpp  InteractiveCamera.hpp  LinkedList.h  Matrix.cpp  Matrix.hpp  OrbitingCamera.cpp  OrbitingCamera.h  Quaternion.cpp  Quaternion.hpp  Vector.cpp  Vector.hpp  commonmath.h
src/gputracker/utils/capture/: Kinect.cpp  KinectDisparityCompressor.cpp  KinectDisparityCompressor.h  VideoPreProcessorCPU.cpp  VideoPreProcessorCPU.h  VideoPreProcessorGPU.cpp  VideoPreProcessorGPU.h  fileSource.cpp  fileSource.h  kinect.h  videoSource.h
src/gputracker/utils/expm/: expmHost.cpp  expmHost.h  f2cHost.h
src/gputracker/utils/image2/: Image2.cpp  Image2.h  ImagePyramid2.cpp  ImagePyramid2.h
src/gputracker/utils/imagematch/: ICP.cpp  ICP.h  MEstimator.cpp
src/gputracker/utils/multicore/: multicore.cpp  multicore.h
src/gputracker/utils/reconstruct/: KeyFrame.cpp  KeyFrame.h  KeyFrameModel.cpp  KeyFrameModel.h  basic_math.cpp  basic_math.h  zconv.cpp  zconv.h
src/gputracker/utils/rendering/: BaseBuffer2.cpp  BaseBuffer2.h  GLWindow.cpp  GLWindow.h  LineBuffer.cpp  LineBuffer.h  TriangleBuffer2.cpp  TriangleBuffer2.h  TrueTypeText.h  VertexBuffer2.cpp  VertexBuffer2.h  shader.cpp  shader.h  teapot.cpp  teapot.h
src/gputracker/utils/structure/: SbaInterface.cpp  SbaInterface.h  configuration.cpp  configuration.h  imgproj.cpp  readparams.cpp  readparams.h  sparseBundleConfiguration.cpp  sparseBundleConfiguration.h
src/gputracker/utils/warping/: KeyFrameRing.cpp  KeyFrameRing.h
src/kinectRecorder/: CMakeLists.txt  kinectRecorder.cpp  testApplication.cpp  testApplication.h
src/tools/kinect_rgbd_to_stereo/: CMakeLists.txt
src/tools/kinect_rgbd_to_stereo/example/: cameraposes.txt  lanxudepth.ppm  lanxurgb.ppm
src/tools/kinect_rgbd_to_stereo/ext/: CMakeLists.txt
src/tools/kinect_rgbd_to_stereo/stereogen/: CMakeLists.txt
src/tools/kinect_rgbd_to_stereo/stereogen/include/: GLSLProgram.h  GroundTruth.h  Image2.h  SmokeRenderer.h  SmokeShaders.h  VideoPreProcessorCPU.h  basic_math.h  calib.h  fileSource.h  keyframe.h  multicore.h  performanceCounter.h  screenshot.h  types.h  videoSource.h  zconv.h
src/tools/kinect_rgbd_to_stereo/stereogen/src/: GLSLProgram.cpp  GroundTruth.cpp  Image2.cpp  SmokeRenderer.cpp  SmokeShaders.cpp  VideoPreProcessorCPU.cpp  basic_math.cpp  calib.cpp  fileSource.cpp  framebufferObject.cpp  keyframe.cpp  main.cpp  multicore.cpp  renderbuffer.cpp  screenshot.cpp  zconv.cpp
